# Seam-Carving-Engine

./: .gitignore  CMakeLists.txt  README.md  main.cpp  run.ps1
include/: Common.hpp  EnergyMap.hpp  ImageHandler.hpp  SeamSolver.hpp
src/: EnergyMap.cpp  ImageHandler.cpp  SeamSolver.cpp
tests/: benchmark.cpp  test_correctness.cpp
